--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
   <link rel="shortcut icon" href="/img/cat-in-black-silhouette.png">
-  <title>KU-UCING - Temukan penyakit dan solusi yang tepat untuk kucing kamu</title>
+  <title>{{title}}</title>
 
   <!-- General CSS Files -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -13,59 +13,17 @@
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/components.css">
   <link rel="stylesheet" href="/css/skins/blue-dark.css">
-  <link rel=""
-</head>
+  <link rel="stylesheet" href="/css/custom.css">
+ </head>
 
 <body class="skin-reverse">
   <div id="app">
     <div class="main-wrapper">
-      <div class="navbar-bg"></div>
-      <nav class="navbar navbar-expand-lg main-navbar">
-        <form class="form-inline mr-auto">
-          <ul class="navbar-nav mr-3">
-            <li><a href="#" data-toggle="sidebar" class="nav-link nav-link-lg"><i class="fas fa-bars"></i></a></li>
-          </ul>
-          
-        </form>
-        <ul class="navbar-nav navbar-right">
-          <li class="dropdown"><a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle nav-link-lg nav-link-user">
-            <img alt="image" src="/img/avatar/avatar-1.png" class="rounded-circle mr-1">
-            <div class="d-sm-none d-lg-inline-block">Hi, Ujang Maman</div></a>
-            <div class="dropdown-menu dropdown-menu-right">
-              
-              <a href="features-settings.html" class="dropdown-item has-icon">
-                <i class="fas fa-cog"></i> Settings
-              </a>
-              <a href="#" class="dropdown-item has-icon text-danger">
-                <i class="fas fa-sign-out-alt"></i> Logout
-              </a>
-            </div>
-          </li>
-        </ul>
-      </nav>
-      <div class="main-sidebar">
-        <aside id="sidebar-wrapper">
-          <div class="sidebar-brand">
-            <a href="index.html">KU-UCING</a>
-          </div>
-          <div class="sidebar-brand sidebar-brand-sm">
-            <a href="index.html">KU</a>
-          </div>
-          <ul class="sidebar-menu">
-              <li class="menu-header">Dashboard</li>
-              <li class="nav-item dropdown active">
-                <a href="#" class="nav-link has-dropdown"><i class="fas fa-fire"></i><span>Dashboard</span></a>
-              </li>
-              <li class="menu-header">Pengobatan</li>
-              <li><a class="nav-link" href="blank.html"><i class="fas fa-vimeo"></i><span>Penyakit</span></a></li>
-              <li><a class="nav-link" href="blank.html"><i class="fas fa-asterisk"></i><span>Gejala</span></a></li>
-              <li><a class="nav-link" href="blank.html"><i class="fas fa-check"></i> <span>Obat</span></a></li>
-              <li class="menu-header">Pengguna</li>
-              <li><a class="nav-link" href="blank.html"><i class="fas fa-user"></i><span>Pemilik</span></a></li>
-              <li><a class="nav-link" href="blank.html"><i class="fas fa-cat"></i><span>Kucing</span></a></li>
-        </aside>
-      </div>
+      
+      {% include "header.html" %}
 
+      {% include "menu.html" %}
+     
       <!-- Main Content -->
       <div class="main-content">
      
